docs(core): synchronize documentation with Stage 1 MVP and initialize Stage 2 requirements
- Created REQUIREMENTS_STAGE_2.md defining AI-driven tactical analysis specifications.
- Updated ARCHITECTURE.md to reflect the Model-View-Presenter (MVP) pattern and Java 23 stack.
- Revised API.md to document the MainViewUI interface and presenter-based interaction model.
- Updated README.md roadmap and installation notes for Stage 2 readiness.
- Ensured all architectural diagrams and data flow sequences match the current implementation.